ci: add CI workflow with tag-based npm publish
- Typecheck + tests on push/PR
- Test matrix on Node 20 and 22
- Publish to npm on v* tags after all checks pass
- Switch glide-mq dev dep from file: to npm

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "express": "^4 || ^5"
   },
   "devDependencies": {
-    "glide-mq": "file:../glide-mq",
+    "glide-mq": "^0.8.0",
     "express": "^5",
     "@types/express": "^5",
     "@types/node": "^22",
